compiler/testData/diagnostics/tests/secondaryConstructors/noPrimaryConstructor.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
class A {
    constructor(x: Int)
}

konst x = A<!NO_VALUE_FOR_PARAMETER!>()<!>
